Fix: Fixing Css Overflow

--- a/css/testhd.css
+++ b/css/testhd.css
@@ -36,20 +36,23 @@ border-color: rgba(255, 255, 255, 0.0);
 #header{
 	height:100px;
 	background-color:#2aB200;
+	overflow: hidden;
 }
 
 #banner{
-position: relative;
-float: left;
-color: white;
-font-family: cursive;
-font-weight: bold;
-font-size: 23px;
-padding: 25px;
+	position: relative;
+	top: 15px;
+	left: 35px;
+	width: 148px;
+	float: left;
+	color: white;
+	font-family: cursive;
+	font-weight: bold;
+	font-size: 23px;
 }
 
 #icons{
-	top: 55px;
+	top: 60px;
 	right:50px;
 	position: relative;
 	float: right;
@@ -249,18 +252,22 @@ div.liketooltip span:after {
 height:325px;
 }
 
-/*format the form*/
+/*format both form*/
 /*  */
 
 #loginform{
 	position: relative;
 	z-index: 5;
-	width:345px;
+	width: 345px;
 	top: -10px;
+	float: left;
 	left: 75px;
+	margin: 0px;
 	color: white;
 	font-family: monospace;
 	font-size: 20px;
+	visibility:hidden;
+	opacity:0;
 }
 
 #loginheadertext{
@@ -376,11 +383,6 @@ left: 125px;
 	font-weight: bolder;
 	border-radius: 3px;
 }
-#loginsubmit{ -webkit-transition: all .1s ease-in-out; -moz-transition: all .1s ease-in-out; }
-#loginsubmit:hover{
-	-webkit-transform: scale(1.1);
-	-moz-transform: scale(1.1);
-}
 
 
 
@@ -408,6 +410,54 @@ font-family: monospace;
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
 }
+
+
+/*registration form*/
+#regform{
+	position: relative;
+	top: -10px;
+	float: right;
+	left: 0px;
+	visibility: hidden;
+	opacity: 0;
+	margin: 0px;
+	z-index: 5;
+	width: 370px;
+	color: white;
+	font-family: monospace;
+	font-size: 20px;
+}
+
+#regheadertext{
+	position: relative;
+	bottom: 25px;
+	font-size: 40px;
+	font-family: fantasy;
+	opacity: .5;
+}
+
+#regheadertext span{
+	display: block;
+	height: 4px;
+	width: 310px;
+	background-color: white;
+}
+
+
+#regsubmitbutton{
+	position: relative;
+	top: 10px;
+	height: 40px;
+	width: 105px;
+	border: none;
+	background-color: white;
+	font-family: monospace;
+	color: #2aB200;
+	font-size: 19px;
+	font-weight: bolder;
+	border-radius: 3px;
+}
+
 
 
 /* tooltip for loginbutton*/
@@ -508,8 +558,21 @@ div.logintooltips span:after {
 }
 
 #footer{
-	height: 119px;
+	height: 100px;
 }
 
 
+
+#copyright{
+	margin: 0 auto;
+	width: 295px;
+	color: rgba(255, 255, 255, 0.71);
+	font-family: sans-serif;
+	font-size: 13px;
+}
+
+#copyright p{
+	position: absolute;
+	bottom: 20px;
+}
 } /* hd res layout over */
